--- a/app/globals.css
+++ b/app/globals.css
@@ -80,6 +80,10 @@
   }
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 .dark .img-shadow {
   width: 350px;
   -webkit-filter: drop-shadow(5px 10px 5px #090a01e2);
